renaming to adblocky

--- a/chrome/content/tests/performance/memory_use1.html
+++ b/chrome/content/tests/performance/memory_use1.html
@@ -5,7 +5,7 @@
   <script type="application/x-javascript;version=1.7" src="../../httpd.js"></script>
 </head>
 <body>
-  <p>This page will continuously create new images with the same address and throw them away. Adblock Plus should let garbage collection do its job and the browser's memory use shouldn't increase while this page is open.</p>
+  <p>This page will continuously create new images with the same address and throw them away. Adblocky should let garbage collection do its job and the browser's memory use shouldn't increase while this page is open.</p>
 
   <iframe id="frame" style="visibility: visible;"></iframe>
 
