rename to community adblock

--- a/chrome/content/tests/ui/test_icon_status.html
+++ b/chrome/content/tests/ui/test_icon_status.html
@@ -43,7 +43,7 @@
         Prefs.enabled = true;
       setTimeout(function()
       {
-        is(element.getAttribute("abpstate"), "active", "Checking icon state when Adblocky is enabled");
+        is(element.getAttribute("abpstate"), "active", "Checking icon state when Community Adblock is enabled");
         runNextTest();
       }, 0);
     }
@@ -54,7 +54,7 @@
         Prefs.enabled = false;
       setTimeout(function()
       {
-        is(element.getAttribute("abpstate"), "disabled", "Checking icon state when Adblocky is disabled");
+        is(element.getAttribute("abpstate"), "disabled", "Checking icon state when Community Adblock is disabled");
         runNextTest();
       }, 0);
     }
