--- a/chrome/content/tests/performance/page_load_overhead.html
+++ b/chrome/content/tests/performance/page_load_overhead.html
@@ -9,7 +9,7 @@
 <body>
   <p>
     <input type="checkbox" id="enableABP" checked="checked" onclick="if (!this.disabled) document.getElementById('filters').disabled = !this.checked;">
-    <label for="enableABP">Enable Community Adblock processing</label><br>
+    <label for="enableABP">Enable Ad Blocking Community processing</label><br>
     Filters to be used:<br>
     <textarea id="filters" style="width: 100%; height: 300px;"></textarea><br>
     <button id="startButton" onclick="start();">Click to start test</button>
