--- a/chrome/content/index.html
+++ b/chrome/content/index.html
@@ -50,7 +50,7 @@
     </script>
   </head>
   <body>
-    <h1 id="qunit-header">Community Adblock unit tests</h1>
+    <h1 id="qunit-header">Ad Blocking Community unit tests</h1>
     <h2 id="qunit-banner"></h2>
     <div id="qunit-testrunner-toolbar"></div>
     <h2 id="qunit-userAgent"></h2>
